Updating the docs in ramp-board/dev/ for branch: master, commit 69866069d8d30fa5a4313984a304a87efb860d96 [skip ci]

--- a/ramp-board/dev/genindex.html
+++ b/ramp-board/dev/genindex.html
@@ -220,6 +220,8 @@
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-approve-user-config">ramp-database-approve-user command line option</a>
 </li>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-config">ramp-database-compute-contributivity command line option</a>
+</li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-config">ramp-database-delete-event command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-config">ramp-database-delete-event-team command line option</a>
@@ -261,6 +263,8 @@
     --config-event &lt;config_event&gt;
 
       <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-config-event">ramp-database-compute-contributivity command line option</a>
+</li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-config-event">ramp-database-delete-event command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-predictions-config-event">ramp-database-delete-predictions command line option</a>
@@ -431,6 +435,13 @@
         <li><a href="cli.html#cmdoption-ramp-database-make-user-admin-login">ramp-database-make-user-admin command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-set-user-access-level-login">ramp-database-set-user-access-level command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --min-improvement &lt;min_improvement&gt;
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-min-improvement">ramp-database-compute-contributivity command line option</a>
 </li>
       </ul></li>
       <li>
@@ -1140,6 +1151,17 @@
         <li><a href="cli.html#cmdoption-ramp-database-approve-user-config">--config &lt;config&gt;</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-approve-user-login">--login &lt;login&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    ramp-database-compute-contributivity command line option
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-config">--config &lt;config&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-config-event">--config-event &lt;config_event&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-min-improvement">--min-improvement &lt;min_improvement&gt;</a>
 </li>
       </ul></li>
       <li>
