--- a/ramp-workflow/dev/using_kits.html
+++ b/ramp-workflow/dev/using_kits.html
@@ -236,7 +236,7 @@ Shortly afterward, your submission will be sent for training and you will be
 able to see the status of your submission in “My submissions”. When your
 submission is waiting in the queue to be trained, it will appear in the
 table “New submissions”. Once trained it will either appear in “Trained
-submissions” (if it trained sucessfully) or in “Failed submissions”. If your
+submissions” (if it trained successfully) or in “Failed submissions”. If your
 submission failed, you can click on the error to see part of the trace.</p>
 <a class="reference internal image-reference" href="_images/ramp_my_submissions.png"><img alt="_images/ramp_my_submissions.png" src="_images/ramp_my_submissions.png" style="width: 800px;" /></a>
 <div class="line-block">
