Updating the docs in ramp-workflow/dev/ for branch: master, commit 3c1ada8c628ad0b43c59717ea265c0062df38d5a [skip ci]

--- a/ramp-workflow/dev/genindex.html
+++ b/ramp-workflow/dev/genindex.html
@@ -151,12 +151,21 @@
 </li>
       </ul></li>
       <li>
+    --partial-train
+
+      <ul>
+        <li><a href="command_line.html#cmdoption-ramp-test-partial-train">ramp-test command line option</a>
+</li>
+      </ul></li>
+      <li>
     --pickle
 
       <ul>
         <li><a href="command_line.html#cmdoption-ramp-test-pickle">ramp-test command line option</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --precision &lt;precision&gt;
 
@@ -164,8 +173,6 @@
         <li><a href="command_line.html#cmdoption-ramp-show-leaderboard-precision">ramp-show-leaderboard command line option</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --quick-test
 
@@ -262,8 +269,6 @@
         <li><a href="command_line.html#cmdoption-ramp-show-leaderboard-step">--step &lt;step&gt;</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-test command line option
 
@@ -273,6 +278,8 @@
         <li><a href="command_line.html#cmdoption-ramp-test-ignore-warning">--ignore-warning</a>
 </li>
         <li><a href="command_line.html#cmdoption-ramp-test-notebook">--notebook</a>
+</li>
+        <li><a href="command_line.html#cmdoption-ramp-test-partial-train">--partial-train</a>
 </li>
         <li><a href="command_line.html#cmdoption-ramp-test-pickle">--pickle</a>
 </li>
