Updating the docs in ramp-board/dev/ for branch: master, commit 140ea99d026c1cb20d46045ef69f72f8a677a044 [skip ci]

--- a/ramp-board/dev/workers.html
+++ b/ramp-board/dev/workers.html
@@ -379,20 +379,69 @@ component’. Then select:</p>
     type: string
     value: $PASSWORD
 phases:
-  - name: build
+  - name: Build
     steps:
+      - name: install_system
+        action: ExecuteBash
+        inputs:
+          commands:
+            - |
+              set -e
+              echo &quot;===== Updating package cache and git =====&quot;
+
+              sudo apt update
+              sudo apt install --no-install-recommends --yes git
+
+              echo &quot;===== Done =====&quot;
+
       - name: install_conda
         action: ExecuteBash
         inputs:
           commands:
             - |
               set -e
-              wget -q https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+              echo &quot;===== Install conda and mamba =====&quot;
+
+              wget -q https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-Linux-x86_64.sh -O miniconda.sh
               bash ./miniconda.sh -b -p {{ Home }}/miniconda
               export PATH={{ Home }}/miniconda/bin:$PATH
               conda init
-              conda update --yes --quiet conda
-              conda install --quiet python==3.8 pip
+              conda install -y --quiet python pip mamba
+
+              echo &quot;===== Done =====&quot;
+
+      - name: add_conda_to_user_path
+        action: ExecuteBash
+        inputs:
+          commands:
+            - |
+              set -e
+              echo &quot;===== Setup conda for user ubuntu =====&quot;
+
+              # Always run .bashrc for bash even when it is not interactive
+              sed -e &#39;/# If not running interactively,/,+5d&#39; -i {{ Home }}/.bashrc
+              # Run conda init to allow using conda in the bash
+              sudo -u ubuntu bash -c &#39;export PATH={{ Home }}/miniconda/bin:$PATH &amp;&amp; conda init&#39;
+              echo &quot;Added conda in PATH for user ubuntu&quot;
+
+              echo &quot;===== Done =====&quot;
+
+
+      - name: install_gpu_related
+        action: ExecuteBash
+        inputs:
+          commands:
+            - |
+              set -e
+              echo &quot;===== Installing Nvidia drivers for GPUs =====&quot;
+
+              # Install the nvidia drivers to be able to use the GPUs
+              # Use the headless version to avoid installing unrelated
+              # library related to display capabilities
+
+              sudo apt install --no-install-recommends --yes nvidia-headless-440 nvidia-utils-440
+
+              echo &quot;===== Done =====&quot;
 
       - name: install_challenge
         action: ExecuteBash
@@ -400,40 +449,45 @@ phases:
           commands:
             - |
               set -e
+              echo &quot;===== Installing Dependencies =====&quot;
+
               export PATH={{ Home }}/miniconda/bin:$PATH
+
+              # clone the challenge files
               git clone https://github.com/ramp-kits/{{ Challenge }}.git {{ Home }}/{{ Challenge }}
-              # next step is important if you want to use GPUs
-              sudo apt install --yes nvidia-driver-440
-              sudo apt install --yes nvidia-utils-440  # you might want to use different version
-              conda env update --name base --file {{ Home }}/{{ Challenge }}/environment.yml
+
+              # Choose one of these options to install dependencies:
+
+              # 1. Use the package from conda, using mamba to accelerate the
+              # environment resolution
+              mamba env update --name base --file {{ Home }}/{{ Challenge }}/environment.yml
+
+              # 2. Use pip to install packages. In this case, make sure to
+              # install all needed dependencies beforehand using apt.
               pip install -r {{ Home }}/{{ Challenge }}/requirements.txt
               pip install -r {{ Home }}/{{ Challenge }}/extra_libraries.txt
-              conda install -c anaconda cudatoolkit
+
+              echo &quot;===== Done =====&quot;
+
+
       - name: download_data
         action: ExecuteBash
         timeoutSeconds: 7200
         inputs:
           commands:
             - |
+              set -e
+              echo &quot;===== Downloading Private Data =====&quot;
+
+              cd {{ Home }}/{{ Challenge }}
               export PATH={{ Home }}/miniconda/bin:$PATH
-              cd {{ Home }}/{{ Challenge }}
-              # Download private data from osf
-              cd {{ Home }}/{{ Challenge }}
               python download_data.py --private --username {{ OSF_username }} --password {{ OSF_password }}
+
               # Make sure everything is owned by
               chown -R ubuntu {{ Home }}
-              echo &quot;Installing done!&quot;
-      - name: add_conda_to_path
-        action: ExecuteBash
-        inputs:
-          commands:
-            - |
-              set -e
-              # Always run .bashrc for bash even when it is not interactive
-              sed -e &#39;/# If not running interactively,/,+5d&#39; -i {{ Home }}/.bashrc
-              # Run conda init to allow using conda in the bash
-              sudo -u ubuntu bash -c &#39;export PATH={{ Home }}/miniconda/bin:$PATH &amp;&amp; conda init&#39;
-              echo &quot;Added conda in PATH for user ubuntu&quot;
+
+              echo &quot;===== Done =====&quot;
+
   - name: test
     steps:
       - name: test_ramp_install
@@ -442,13 +496,14 @@ phases:
           commands:
             - |
               set -e
-              echo &quot;Test ramp install&quot;
-              echo &quot;User: &#39;$USER&#39;&quot;
+              echo &quot;===== Test ramp install =====&quot;
+
               cd {{ Home }}/{{ Challenge }}
               sudo -u ubuntu BASH_ENV={{ Home }}/.bashrc bash -c &#39;conda info&#39;
               # Run a ramp-test for the starting kit to make sure everything is running properly
-              sudo -u ubuntu BASH_ENV={{ Home }}/.bashrc bash -c &#39;ramp-test --submission sample --quick-test&#39;
-              echo &quot;test end&quot;
+              sudo -u ubuntu BASH_ENV={{ Home }}/.bashrc bash -c &#39;ramp-test --submission starting_kit --quick-test&#39;
+
+              echo &quot;====== Done ======&quot;
 </pre></div>
 </div>
 </li>
