--- a/ramp-workflow/dev/using_kits.html
+++ b/ramp-workflow/dev/using_kits.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Using RAMP starting-kits &mdash; RAMP 0.5.0.dev0 documentation</title><link rel="stylesheet" href="_static/css/ramp.css" type="text/css" />
+  <title>Using RAMP starting-kits &mdash; RAMP 0.5.0 documentation</title><link rel="stylesheet" href="_static/css/ramp.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/basic.css" type="text/css" />
   <!--[if lt IE 9]>
@@ -29,7 +29,7 @@
             <a href="index.html" class="icon icon-home"> RAMP
           </a>
               <div class="version">
-                0.5.0.dev0
+                0.5.0
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
